# AoC22

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
app/: Cargo.toml
app/src/: main.rs
day01/: Cargo.toml
day01/src/: lib.rs  main.rs
day02/: Cargo.toml
day02/src/: lib.rs
day03/: Cargo.toml
day03/src/: lib.rs
day04/: Cargo.toml
day04/src/: lib.rs
day05/: Cargo.toml
day05/src/: lib.rs
day06/: Cargo.toml
day06/src/: lib.rs
day07/: Cargo.toml
day07/src/: lib.rs
day08/: Cargo.toml
day08/src/: lib.rs
day09/: Cargo.toml
day09/src/: lib.rs
day10/: Cargo.toml
day10/src/: lib.rs
day11/: Cargo.toml
day11/src/: lib.rs
day12/: Cargo.toml
day12/src/: lib.rs
day13/: Cargo.toml
day13/src/: lib.rs
day14/: Cargo.toml
day14/src/: lib.rs
day15/: Cargo.toml
day15/src/: lib.rs
day16/: Cargo.toml
day16/src/: lib.rs  main.rs
inputs/src/: lib.rs
results/src/: lib.rs
