[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day01 = { path = "../day01/" }
day02 = { path = "../day02/" }
day03 = { path = "../day03/" }
day04 = { path = "../day04" }
day05 = { version = "0.1.0", path = "../day05" }
day06 = { version = "0.1.0", path = "../day06" }
day07 = { version = "0.1.0", path = "../day07" }
day08 = { version = "0.1.0", path = "../day08" }
day09 = { version = "0.1.0", path = "../day09" }
day10 = { version = "0.1.0", path = "../day10" }
day11 = { version = "0.1.0", path = "../day11" }
day12 = { version = "0.1.0", path = "../day12" }
day13 = { version = "0.1.0", path = "../day13" }
day14 = { version = "0.1.0", path = "../day14" }
