[package]
name = "day13"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inputs = { version = "0.1.0", path = "../inputs" }
serde_json = "1.0.91"
serde = { version = "1.0.151", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"
results = { version = "0.1.0", path = "../results" }
