[package]
name = "day16"
version = "0.1.0"
edition = "2021"
[profile.release]
debug = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inputs = { version = "0.1.0", path = "../inputs" }
results = { version = "0.1.0", path = "../results" }
regex = "1.9.1"
rayon = "1.7.0"
